--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="/index.html" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom">
+        <a class="navbar-brand" href="index.html" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom">
           Travel
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -204,7 +204,7 @@
     </div>
   </nav>
     <!-- ----------------------------------------------End Navbar---------------------------------------------- -->
-    <div class="page-header" style="background-image: url('../assets/img/login-image.jpg');">
+    <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
     <div class="filter"></div>
     <div class="container">
       <div class="row">
@@ -252,7 +252,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="/index.html" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
+        <a class="navbar-brand" href="index.html" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
           Travel
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -294,7 +294,7 @@
       </div>
     </div>
   </nav>
-  <div class="page-header" style="background-image: url('../assets/img/login-image.jpg');">
+  <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
     <div class="filter"></div>
     <div class="container">
       <div class="row">
