--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <link href="./assets/demo/demo.css" rel="stylesheet" />
     
   </head>
-  <body class="index-page sidebar-collapse">
-    <div  id="Home">
+  <body class="index-page sidebar-collapse">  
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------------------------------------------    Home Page    ---------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="1000">
+    <div  id="Home">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="1000">
       <div class="container">
         <div class="navbar-translate">
-          <a class="navbar-brand" href="index.html" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
+          <a class="navbar-brand" href="#" onclick="showHome()" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
             Travel
           </a>
           <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,11 +66,11 @@
                 <p class="d-lg-none">GitHub</p>
               </a>
             </li>
-            <li class="nav-item">
-              <a href="#/login" onclick="showLogin()" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
+            <li class="nav-item" id="welcome">
+              <a href="#/login" onclick="showLogin()" id="login-btn" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
             </li>
             <li class="nav-item">
-              <a href="HTML/register.html" class="btn btn-danger btn-round">Sign-Up</a>
+              <a href="#/register.html" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
             </li>
           </ul>
         </div>
@@ -97,10 +97,10 @@
     </div>
     <!-- ----------------------------------------------End Page header---------------------------------------------- -->
     <div class="main">
-      <div class="section">
+      <div class="section section-dark">
         <div class="container">
           <div class="title">
-            <h1>Top countries in tourism in 2021!</h1>
+            <h1 class="text-warning">Top countries in tourism in 2021!</h1>
           </div>
           <div class="card mb-3">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
@@ -111,45 +111,144 @@
             </div>
           </div>
           <div class="card mb-3">
-            <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://wallpaperaccess.com/full/2527006.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">2-France</h2>
+              <h2 class="card-title">2-Spain</h2>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card mb-3">
-            <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://wallpapercave.com/wp/wp4472281.png" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">3-France</h2>
+              <h2 class="card-title">3-United states</h2>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card mb-3">
-            <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://bonpic.com/wallpapers/original/4508.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">4-France</h2>
+              <h2 class="card-title">4-China</h2>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card mb-3">
-            <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://wallpaperaccess.com/full/5994288.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">5-France</h2>
+              <h2 class="card-title">5-Italy</h2>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
         </div>
       </div>
-      <div class="section">
-
+      <div class="section section-image" style="background-image: url('./assets/img/login-image.jpg')">
+        <div class="container">
+          <h1 class="text-warning">recomnded countries</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-0">
+            <div class="card bg-danger text-white">
+              <img src="/images/japan.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Japan</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/austria.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Austria</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/india.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">India</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/turkey-istanbul.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Turkey</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/mexico.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Mexico</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/Thailand-Krabi.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Thailand</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/germany.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">Germany</h5>
+              </div>
+            </div>
+            <div class="card bg-danger text-white">
+              <img src="/images/united-kingdom.jpg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-warning font-weight-bold">United kingdom</h5>
+              </div>
+            </div>
+              <div class="card bg-danger text-white">
+                <img src="/images/switzerland.jpg" class="card-img-top" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-center text-warning font-weight-bold">Switzerland</h5>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-dark text-secondary px-4 py-5 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 ml-auto mr-auto">
+            <h2 class="text-center">Keep in touch?</h2>
+            <form class="contact-form">
+              <div class="row">
+                <div class="col-md-6">
+                  <label class="text-warning">Name</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="nc-icon nc-single-02"></i>
+                      </span>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Name">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <label class="text-warning">Email</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="nc-icon nc-email-85"></i>
+                      </span>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Email">
+                  </div>
+                </div>
+              </div>
+              <label class="text-warning">Message</label>
+              <textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>
+              <div class="row">
+                <div class="col-md-4 ml-auto mr-auto">
+                  <button class="btn btn-danger btn-lg btn-fill">Send Message</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
 
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -161,7 +260,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="index.html" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom">
+        <a class="navbar-brand" href="#" onclick="showHome()" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom">
           Travel
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -225,14 +324,14 @@
             <form class="register-form">
               <label>Username</label>
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Username" required>
+                <input type="text" class="form-control" id="username" placeholder="Username" required>
                 <div class="input-group-append">
                   <span class="input-group-text"><i class="fa fa-group" aria-hidden="true"></i></span>
                 </div>
               </div>
               <label>Password</label>
-              <input type="password" class="form-control" placeholder="Password" required>
-              <button class="btn btn-danger btn-block btn-round">Login</button>
+              <input type="password" class="form-control" id="password" placeholder="Password" required>
+              <button class="btn btn-danger btn-block btn-round" onclick="login()">Login</button>
             </form>
             <div class="forgot">
               <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
@@ -242,6 +341,9 @@
       </div>
     </div>
   </div>
+  </div>
+
+
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------------------------------------------    Register Page    ------------------------------------------------------------------------------------------------------ -->
@@ -327,10 +429,15 @@
       </div>
     </div>
   </div>
-
-
-
-
+  </div>
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+    <p class="text-center text-muted">© 2022 Travel, Inc</p>
+  </footer>
 
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
