--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="content-center">
         <div class="container">
           <div class="title-brand">
-            <h1 class="presentation-title">Tourism countries</h1>
+            <h1 class="title-1">Tourism countries</h1>
             <div class="fog-low">
               <img src="./assets/img/fog-low.png" alt="">
             </div>
